--- a/style/main.scss
+++ b/style/main.scss
@@ -15,7 +15,7 @@ body {
   bottom: 0;
   right: 0;
   margin: auto;
-  user-select: none;
+  // user-select: none;
 
   .hidden {
     display: none;
@@ -102,6 +102,16 @@ body {
       overflow-y: auto;
       text-align: center;
       font-family: Arial, Helvetica, sans-serif;
+
+      .choice {
+        font-size: 1.5vw;
+        color: rgb(7, 128, 128);
+        text-shadow: 0vw 0vw 0.2vw rgb(10, 15, 10);
+        text-decoration: underline;
+        float: left;
+        margin: 2vw;
+        cursor: pointer;
+      }
 
       .por-container {
         width: 100%;
