--- a/style/main.scss
+++ b/style/main.scss
@@ -26,8 +26,8 @@ body {
   .textBox {
     width: auto;
     height: auto;
-    min-width: 8%;
-    min-height: 4.8%;
+    // min-width: 8%;
+    // min-height: 4.8%;
     max-width: 16%;
     max-height: 9.6%;
     position: absolute;
@@ -42,12 +42,13 @@ body {
     text-overflow: ellipsis;
     z-index: 10;
 
-    p, span {
+    pre, p, span {
       font-size: 0.8vw;
       color: rgb(15, 15, 15);
-      font-family: Arial, Helvetica, sans-serif;
+      font-family:MaliMedium;
       margin: 0;
       text-shadow: 0vw 0vw 0.05vw black;
+      white-space: pre-wrap;
     }
   }
 
@@ -59,6 +60,10 @@ body {
     box-sizing: border-box;
     border: 8px solid rgb(70, 70, 70);
     position: absolute;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   > .partyBar {
@@ -77,6 +82,16 @@ body {
 
   > .infoBar {
     right: 0;
+
+    .partyContainer {
+      width: 100%;
+      height: 75%;
+      position: relative;
+      left: 0;
+      top: 0;
+      overflow-y: auto;
+      margin: 0;
+    }
   }
 
   .textMap {
@@ -101,7 +116,27 @@ body {
       overflow: hidden;
       overflow-y: auto;
       text-align: center;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family:MaliMedium;
+      background-image: url(../gfx/menu/bg_paper_dark.png);
+      background-size: cover;
+
+      pre, p, span, button {
+        color: rgb(15, 15, 15);
+        font-family:MaliMedium;
+        margin: 0;
+        text-shadow: 0vw 0vw 0.1vw black;
+        white-space: pre-wrap;
+        padding: 0;
+        height: auto;
+        width: auto;
+
+        .actor_combat {
+          position: relative;
+          top: 0.5vw;
+          width: 2.15vw;
+          border-radius: 50%;
+        }
+      }
 
       .choice {
         font-size: 1.5vw;
@@ -113,9 +148,46 @@ body {
         cursor: pointer;
       }
 
+      .button-wrapper {
+        width: 100%;
+        height: auto;
+        position: fixed;
+        justify-content: center;
+        text-align: center;
+        display: flex;
+        position: relative;
+        left: 0;
+        top: 0;
+
+        button {
+          transition: 0.05s;
+          width: 7.8vw;
+          height: 2.1vw;
+          border: none;
+          background-image: url(../gfx/menu/button.png);
+          background-repeat: no-repeat;
+          background-size: 7.8vw 2.1vw;
+          font-size: 1vw;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          margin: 0.25vw;
+          outline: none;
+          font-size: 0.8vw;
+          color: rgb(15, 15, 15);
+          font-family:MaliMedium;
+          margin: 0;
+          text-shadow: 0vw 0vw 0.05vw black;
+        }
+
+        button:hover {
+          filter: brightness(125%);
+        }
+      }
+
       .por-container {
         width: 100%;
-        height: 25%;
+        height: auto;
         position: relative;
         left: 0;
         top: 0;
@@ -130,6 +202,7 @@ body {
           border: 0.2vw solid grey;
           background:rgb(40, 40, 40);
           background-image: var(--bg-noise);
+          box-shadow: -0.25vw 0.25vw 0.4vw 0.25vw rgb(25, 25, 25);
           border-radius: 1vw;
           margin: 2.5%;
 
@@ -166,6 +239,10 @@ body {
     }
   }
 
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
   .actionsContainer {
     height: 15%;
     width: 60%;
@@ -176,6 +253,31 @@ body {
     bottom: 0;
     box-sizing: border-box;
     border: 8px solid rgb(60, 60, 60);
+    overflow: hidden;
+    overflow-y: auto;
+
+    button {
+      transition: 0.05s;
+      width: 15%;
+      height: 50%;
+      border: none;
+      background-image: url(../gfx/menu/button.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      font-size: 1.5vw;
+      color: rgb(15, 15, 15);
+      text-shadow: -0.1vw 0.1vw 0.125vw black;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      outline: none;
+      margin: 0.5%;
+      margin-left: 0.83%;
+    }
+
+    button:hover {
+      filter: brightness(125%);
+    }
   }
 
   .characterPortrait {
