--- a/style/variables.scss
+++ b/style/variables.scss
@@ -40,4 +40,8 @@
   --fs-name: 1.25vw;
   --health-color: #ec3636;
   --health-dark: rgb(63, 5, 5);
+  --energy-color: #36c8ec;
+  --energy-dark: #125566;
+  --gold: rgb(228, 198, 27);
+  --dark-gold: rgb(182, 158, 23);
 }
